--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 <app-page-loader></app-page-loader>
 <router-outlet></router-outlet>
+<button type="button" class="btn btn-primary" popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+  Live demo
+</button>
