--- a/src/app/pages/layout/rooms/checkout/checkout.component.html
+++ b/src/app/pages/layout/rooms/checkout/checkout.component.html
@@ -7,7 +7,7 @@
                 <div class="card p-3">
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="cardSection">
+                            <div class="cardSection" *ngIf="room">
                                 <img class="roomImg" src="https://images.oyoroomscdn.com/uploads/hotel_image/39654/medium/c9373c2b206174a2.jpg">
                                 <h4>Room No : {{room?.RoomNo}}</h4>
                                 <ul>
