Room Save and List updated

--- a/src/app/pages/layout/dashboard/dashboard.component.html
+++ b/src/app/pages/layout/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <a routerLink="/room/add" class="btn btn-primary">Add Room </a>
     <div class="row mt-3">
         <div class="col-md-4">
             <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/occupied">
