--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 text-center p-2 headerTitle">
-        <a id="homeIcon" routerLink="/">
-            <img src="../../../../assets/images/Home.png">
+        <a id="homeIcon" routerLink="/dashboard">
+            <img src="https://sankar108.github.io/MotelAdmiLive/assets/images/Home.png">
         </a>
 
         <h1>MOTEL ADMIN</h1>
