--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-        <img id="ImgLogin" src="../../../../assets/images/login.jpg " />
+        <img id="ImgLogin" src="https://sankar108.github.io/MotelAdmiLive/assets/images/login.jpg " />
     </div>
     <div class="col-md-6">
         <div class="card text-center">
